--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "typescript": "^2.7.2"
   },
   "scripts": {
-    "test": "nyc report --reporter=lcov ava",
+    "test": "nyc ava",
     "coverage": "nyc report --reporter=lcov > coverage.lcov && codecov"
   },
   "repository": {
